--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>Romero gay</title>
+<title>Primeiro site HTML</title>
 <body>
 
 <h1>Meu Primeiro Cabeçalho</h1>
-<p>My first paragraph.</p>
+<p>Exemplo de pagina html.</p>
 
 </body>
 </html>
